--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 　　　　<meta charset="utf-8">
      　 <title>章魚的想像樂園</title>
 　　　　<meta name="description" content="文創/貓咪/興趣">
-        <link rel="stylesheet" href='css.css'>
+        <link rel="stylesheet" href='mycss.css'>
 　</head>
 <body>
   <header>
