--- a/content.htm
+++ b/content.htm
@@ -23,7 +23,7 @@
   </header>
 <main>
 　　　　<div class="mainvisual">
-        <img src="unnamed.jpg" alt='主視覺圖片' width='250' height='225'>
+        <img src="img/unnamed.jpg" alt='主視覺圖片' width='250' height='225'>
         </div>
 
         <article id='profile'>
